<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/navy">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/navy"
        android:title="@string/app_name"
        android:titleTextColor="@color/paper"
        android:subtitleTextColor="@color/gold_soft" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/navy2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nav_home"
            style="@style/NavTab"
            android:text="@string/nav_home" />

        <TextView
            android:id="@+id/nav_atlas"
            style="@style/NavTab"
            android:text="@string/nav_atlas" />

        <TextView
            android:id="@+id/nav_learn"
            style="@style/NavTab"
            android:text="@string/nav_learn" />

        <TextView
            android:id="@+id/nav_quiz"
            style="@style/NavTab"
            android:text="@string/nav_quiz" />

        <TextView
            android:id="@+id/nav_tools"
            style="@style/NavTab"
            android:text="@string/nav_tools" />
    </LinearLayout>
</LinearLayout>
